kubernetes/manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: coffeeshop-network-policy
  namespace: coffeeshop
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: proxy
    ports:
    - protocol: TCP
      port: 8888
  - from:
    - podSelector:
        matchLabels:
          app: counter
    ports:
    - protocol: TCP
      port: 5001
  - from:
    - podSelector:
        matchLabels:
          app: barista
    - podSelector:
        matchLabels:
          app: kitchen
    ports:
    - protocol: TCP
      port: 5672
